fixed failing pipeline tests